project-2/examples/good/09-02-shadow-functions.lg
int main() {
    int f(int x) {
        return x * 2;
    }
    
    int f(int x) {
        return x * 3;
    }
    
    print(f(5)); // 15
    
    return 0;
}
