project-2/examples/bad/same-arg-names.lg
int f(int x, int x) { // compile error
    return 0;
}

int main() {
    print(f(1, 2));
    
    return 0;
}
